# selendra-explorer

./: .editorconfig  .env.example  .gitignore  .run.sh  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  TODO.frontend.md  TODO.md  package-lock.json  package.json  selendra.yaml
.github/workflows/: production.yml
api/: .rustfmt.toml  Cargo.toml
api/src/: main.rs  utils.rs
api/src/handlers/: account.rs  block.rs  event.rs  extrinsic.rs  log.rs  runtime.rs  staking.rs  total.rs  transfer.rs
api/src/models/: account.rs  block.rs  event.rs  extrinsic.rs  log.rs  mod.rs  runtime.rs  staking.rs  total.rs  transfer.rs
backend/: .env  .env.example  .gitignore  Cargo.toml  Dockerfile.account-service  Dockerfile.evm-service  Dockerfile.explorer-api  Dockerfile.substrate-service  README..md  diesel.toml  log.txt  nginx.conf  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml
backend/api/: Cargo.toml
backend/api/src/: main.rs  middleware.rs
backend/api/src/handlers/: mod.rs
backend/api/src/handlers/evm/: account.rs  block.rs  contract.rs  mod.rs  network.rs  transaction.rs
backend/api/src/handlers/substrate/: account.rs  block.rs  event.rs  extrinsic.rs  mod.rs  network.rs
backend/api/src/handlers/websocket/: mod.rs  test.html
backend/api/src/routes/: mod.rs
backend/api/src/routes/evm/: account.rs  block.rs  contract.rs  mod.rs  transaction.rs
backend/blockscan/: Cargo.toml
backend/blockscan/model/src/: account.rs  block.rs  contract.rs  extrinsic.rs  lib.rs  netwiork.rs
backend/blockscan/src/: lib.rs
backend/blockscan/src/evm/: account.rs  method.rs  mod.rs  utils.rs
backend/blockscan/src/substrate/: event.rs  extrinsic.rs  mod.rs  substrate_subxt.rs  validator.rs
backend/config/: Cargo.toml
backend/config/src/: lib.rs
backend/crates/blockscan/model/: Cargo.toml
backend/crates/blockscan/model/src/: account.rs  block.rs  contract.rs  event.rs  extrinsic.rs  method.rs  transaction.rs  validator.rs
backend/crates/blockscan/src/evm/: account.rs  method.rs  mod.rs  utils.rs
backend/crates/blockscan/src/substrate/: event.rs  extrinsic.rs  mod.rs  substrate_subxt.rs  validator.rs
backend/crates/config/: Cargo.toml  selendra_metadata.scale
backend/crates/config/src/: lib.rs
backend/crates/database/: Cargo.toml
backend/crates/database/src/: lib.rs
backend/crates/database/src/evm/: account.rs  block.rs  contract.rs  mod.rs
backend/crates/database/src/substrate/: block.rs  event.rs  extrinsic.rs  mod.rs
backend/crates/error/: Cargo.toml
backend/crates/models/: Cargo.toml
backend/crates/models/src/: evm.rs  substrate.rs
backend/database/: Cargo.toml
backend/database/src/: lib.rs
backend/database/src/evm/: account.rs  block.rs  contract.rs  mod.rs  transaction.rs
backend/error/src/: lib.rs
backend/migrations/2023-05-19-000001_create_initial_tables/: down.sql  up.sql
backend/migrations/2023-05-19-000002_add_wasm_support/: down.sql  up.sql
backend/migrations/2023-05-19-000003_add_wallet_support/: down.sql  up.sql
backend/migrations/2023-10-15-000001_create_validators/: down.sql  up.sql
backend/migrations/2023-10-15-000002_create_staking_rewards/: down.sql  up.sql
backend/model/: Cargo.toml
backend/model/src/: account.rs  block.rs  contract.rs  event.rs  extrinsic.rs  lib.rs  method.rs  netwiork.rs  transaction.rs  validator.rs
backend/models/: Cargo.toml
backend/models/src/: evm.rs  lib.rs  substrate.rs
backend/service/: Cargo.toml
backend/service/account/: Cargo.toml
backend/service/account/src/: account_process.rs  main.rs
backend/service/evm/: Cargo.toml
backend/service/evm/src/: block_process.rs  main.rs  processing_config.rs
backend/service/src/: block_process.rs  main.rs
backend/service/substrate/: Cargo.toml
backend/service/substrate/src/: block_process.rs  main.rs  processing_config.rs
backend/src/: config.js  index.js  main.rs  schema.rs  services.rs  utils.rs
backend/src/api/: accounts.rs  blocks.rs  contracts.rs  events.rs  extrinsics.rs  mod.rs  saved_items.rs  search.rs  stats.rs  tokens.rs  transactions.rs  validators.rs  wallet.rs
backend/src/crawler/: activeAccount.js  blockHarvester.js  havestblock.js  stakingRank.js
backend/src/db/: migrations.rs  mod.rs
backend/src/models/: account.rs  block.rs  contract.rs  event.rs  extrinsic.rs  log.rs  mod.rs  saved_code.rs  saved_contract.rs  staking_reward.rs  token.rs  token_transfer.rs  transaction.rs  validator.rs  wallet_asset.rs  wallet_session.rs  wallet_staking.rs  wasm_code_storage.rs  wasm_contract.rs  wasm_contract_call.rs
backend/src/operations/: account.js  block.js  event.js  extrinsic.js  log.js  runtime.js  staking.js  staking_avg.js  staking_event.js  staking_rm.js  transfer.js
backend/src/services/: account.rs  contract.rs  search.rs  stats.rs  token.rs  wallet.rs
backend/src/services/blockchain/: evm.rs  mod.rs  substrate.rs  sync.rs
backend/src/utils/: apiProvider.js  covert_ss58.js  dbClient.js  index.js
backend/utils/: Cargo.toml
backend/utils/src/: lib.rs
backend/utils/src/evm/: account.rs  method.rs  mod.rs  signature_lookup.rs  utils.rs
backend/utils/src/substrate/: event.rs  extrinsic.rs  mod.rs  validator.rs
bridge/: gateway.js  package-lock.json  package.json
docs/: color-palette.md  ui-improvements.md
frontend/: .env  .env.example   Dockerfile  config-overrides.js  index.html  jsconfig.json  jsconfig.json.bk  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx  App.tsx  SimpleTest.tsx  TestApp.tsx  TestComponent.tsx  index.css  index.js  main.jsx  main.tsx  vite-env.d.ts
frontend/src/components/: AccountsTable.js  BlocksTable.js  ErrorBoundary.tsx  EventsTable.js  ExtrinsicsTable.js  Footer.js  Header.js  Loading.js  LogsTable.js  NotFound.js  Search.js  SideHeader.js  TableAccountStaking.js  TableStaking.js  TransferNoHash.js  TransferTable.js  chart.js  index.ts
frontend/src/config/: app.config.js  app.config.ts  (+2 more)
(+162 files in other folders)
