

[package]
name = "selendrascan"
version = "0.1.0"
edition = "2018"

[dependencies]
sentry = "0.25.0"
sentry-actix = "0.25.0"

mongodb = { version = "2.1.0", default-features = false, features = ["sync"] }
actix-web = "4.0.1"
actix-cors = "0.6.1"
serde = "1.0.136"
serde_json = "1.0.79"
dotenv_codegen = "0.15.0"
regex = "1.5.5"
env_logger = "0.9.0"
