[workspace]
resolver = "2"

members = [ 
    "error", 
    "service/evm",
    "service/substrate",
    "blockscan",
    "blockscan/model",
    "database",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[workspace.dependencies]
thiserror = "2.0.12"
hex = "0.4.3"
ethers = "2.0.14"
serde = "1.0.219"
serde_json = "1.0.140"
futures = "0.3.31"
tokio = { version = "1.45.0", features = ["full"] }
substrate-api-client = "1.17.0"
codec = { package = "parity-scale-codec", version = "3.7", default-features = false, features = ["derive"] }
selendra-runtime = { git = "https://github.com/selendra/selendra.git", branch = "master" }
primitives = { git = "https://github.com/selendra/selendra.git", branch = "master" }
frame-system = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.6.0", default-features = false }
pallet-balances = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.6.0", default-features = false }
pallet-staking = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.6.0", default-features = false }
sp-core = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.6.0", default-features = false }
sp-runtime = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.6.0", default-features = false }

# local dependencies
blockscan = { path = "blockscan"}
blockscan-model = { path = "blockscan/model"}
custom-error = { path = "error" }
