[workspace]
resolver = "2"

members = [ 
    "crates/error", 
    "crates/blockscan",
    "crates/blockscan/model",
    "crates/database",
    "crates/models",
    "crates/config",
    "service/evm",
    "service/substrate",
    "service/account",
    "api",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[workspace.dependencies]
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
hex = "0.4.3"
ethers = "2.0.14"
serde = "1.0.219"
serde_json = "1.0.140"
futures = "0.3.31"
surrealdb = "2.3.3"
dotenv = "0.15.0"
lazy_static = "1.5.0" 
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros", "ws"] }
tracing = "0.1.41"
tower = "0.5.2"
subxt = "0.42.1"
futures-util = "0.3"
uuid = { version = "1.17.0", features = ["v4"] }
tower-http = { version = "0.6.4", features = ["cors", "trace", "timeout"] }
tokio = { version = "1.45.0", features = ["full"] }
substrate-api-client = "1.17.0"
codec = { package = "parity-scale-codec", version = "3.7", default-features = false, features = ["derive"] }
selendra-runtime = { git = "https://github.com/selendra/selendra.git", branch = "master" }
primitives = { git = "https://github.com/selendra/selendra.git", branch = "master" }
frame-system = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.6.0", default-features = false }
pallet-balances = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.6.0", default-features = false }
pallet-staking = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.6.0", default-features = false }
sp-core = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.6.0", default-features = false }
sp-runtime = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.6.0", default-features = false }

# local dependencies
blockscan = { path = "crates/blockscan"}
blockscan-model = { path = "crates/blockscan/model"}
database = { path = "crates/database"}
models = { path = "crates/models"}
config = { path = "crates/config"}
custom-error = { path = "crates/error" }
