[package]
name = "explorer-api"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
surrealdb = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
models = { workspace = true }
tracing-subscriber = { workspace = true }

database = { workspace = true }
config = { workspace = true }
blockscan = { workspace = true }