[package]
name = "explorer-api"
version = "0.1.0"
edition = "2024"

[dependencies]
subxt = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true }
surrealdb = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true } 
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
models = { workspace = true }
database = { workspace = true }
config = { workspace = true }
blockscan = { workspace = true }
custom-error = { workspace = true }