[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
substrate-api-client = { workspace = true }
codec = { workspace = true, features = ["std"] }

model = { workspace = true }
custom-error = { workspace = true }
